--- a/src/main/resources/payment-denied.html
+++ b/src/main/resources/payment-denied.html
@@ -397,7 +397,7 @@
               <td class="email-masthead">
                 <a href="#" class="email-masthead_name">
                   {% if order.product && order.product.issuer && order.product.issuer.logoUri %}
-                    <img  src="{{order.product.issuer.logoUri}}"  width="300px" height="180px"/>
+                    <img  src="https://www.wingoo.com.br/imgs/svg/logo.svg"  width="300px" height="180px"/>
                   {% else %}
                     <img  src="https://backoffice-qa.unovation.com.br/app/img/logo_unopay.svg"  width="300px" height="180px"/>
                   {% endif %}
