the payment email templates were changed to use the wingoo logo for a while

--- a/src/main/resources/payment-approved.html
+++ b/src/main/resources/payment-approved.html
@@ -399,7 +399,7 @@
               {% if order.product && order.product.issuer && order.product.issuer.logoUri %}
                 <img  src="https://www.wingoo.com.br/imgs/svg/logo.svg"  width="300px" height="180px"/>
               {% else %}
-                <img  src="https://backoffice-qa.unovation.com.br/app/img/logo_unopay.svg"  width="300px" height="180px"/>
+                <img  src="https://www.wingoo.com.br/imgs/svg/logo.svg"  width="300px" height="180px"/>
               {% endif %}
             </a>
           </td>
